@@ -1,4 +1,6 @@
 ver 0.20.2 (not yet released)
+* decoder
+  - flac: add options "probesize" and "analyzeduration"
 
 ver 0.20.1 (2017/01/09)
 * input
